# rs-builder-relayer-client

./: .env.example  CLAUDE.md  Cargo.toml  README.md
docs/: POLYMARKET_RELAYER_GUIDE.md  PUBLISH.md
examples/: diagnose_gs026.rs  diagnose_nonce.rs  redeem_all.rs  redeem_magic.rs  redeem_single.rs  setup_wallet.rs  split_merge.rs
src/: client.rs  contracts.rs  direct.rs  error.rs  lib.rs  types.rs
src/auth/: builder.rs  mod.rs  relayer_key.rs
src/builder/: create.rs  derive.rs  mod.rs  proxy.rs  safe.rs
src/operations/: approve.rs  deploy.rs  mod.rs  redeem.rs  split_merge.rs
tests/: auth_test.rs  builder_test.rs  client_test.rs  integration_test.rs  operations_test.rs
