[package]
name = "polymarket-relayer"
version = "0.1.0"
authors = ["baice <baice@example.com>"]
edition = "2021"
description = "A Rust SDK for Polymarket's Builder Relayer — gasless on-chain operations"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["polymarket", "relayer", "gasless", "ethereum", "polygon"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ethers = { version = "2", features = ["abigen"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
tracing = "0.1"
base64 = "0.22"
url = "2"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "setup_wallet"
path = "examples/setup_wallet.rs"

[[example]]
name = "redeem_single"
path = "examples/redeem_single.rs"

[[example]]
name = "redeem_all"
path = "examples/redeem_all.rs"

[[example]]
name = "split_merge"
path = "examples/split_merge.rs"
